<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">P0141_MenuAdv</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="item1">item1</string>
    <string name="item2">item2</string>
    <string name="item3">item3</string>
    <string name="Mail">Mail</string>
    <string name="invisible_group">Отобразить группу</string>
    <string name="invisible_menu">Отобразить пункты меню</string>
    
</resources>