<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.MainActivity" >

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_launcher"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_mail"
        android:icon="@drawable/ic_email_white_36dp"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/Mail"/>
    <item
        android:id="@+id/item1"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/item1"
        android:checkable="true" />"

    <group 
        android:id="@+id/group1" >
        <item
            android:id="@+id/item2"
            android:orderInCategory="4"
            android:showAsAction="never"
            android:title="@string/item2"/>
        <item
            android:id="@+id/item3"
            android:orderInCategory="5"
            android:showAsAction="never"
            android:title="@string/item3"/>
    </group>

</menu>